--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,8 @@ header {
   z-index: 100;
 
   transform: translateX(100%);
-  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
+  /* transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1); */
+  transition: transform 0.9s cubic-bezier(0.5, 0, 0.5, 1);
 }
 
 .nav__list {
@@ -405,16 +406,22 @@ header {
 .portfolio {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  width: 100%;
 }
 
 .portfolio__item {
   background: var(--clr-accent);
   overflow: hidden;
+  width: 100%;
 }
 
 .portfolio__img {
   transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
+  width: 100%;
+  object-fit: cover;
 }
+
+
 
 .portfolio__item:focus {
   position: relative;
@@ -423,7 +430,7 @@ header {
 
 .portfolio__img:hover,
 .portfolio__item:focus .portfolio__img {
-  transform: scale(1.2);
+  transform: scale(1.1);
   opacity: 0.5;
 }
 
