:bento: change logo

--- a/css/style.css
+++ b/css/style.css
@@ -359,10 +359,9 @@ header {
   margin: 0 auto;
 }
 
-.about-me__img {
+/* .about-me__img {
   box-shadow: var(--bs);
-}
-
+} */
 @media (min-width: 600px) {
   .about-me {
     display: grid;
@@ -372,9 +371,10 @@ header {
       'subtitle img'
       'text img'; */
     grid-template-areas:
-      'title title '
-      'subtitle subtitle'
-      'text text ';
+      'title img '
+      'subtitle img'
+      'text img ';
+
     grid-column-gap: 2em;
   }
 
