--- a/scss/main.css
+++ b/scss/main.css
@@ -99,11 +99,12 @@
 
 .menu-branding .portrait {
   width: 250px;
-  height: 330px;
-  background: url("../img/selfie-08.jpg");
+  height: 334px;
+  background: url("../img/selfie-10.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  border-radius: 5px;
 }
 
 .menu-branding .social-list {
