:art: update about me styling
add link for resume

--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,20 @@ header {
   margin: 0 auto;
 }
 
+.about-me__link {
+  text-decoration: none;
+  color: var(--clr-accent);
+  font-weight: var(--fw-bold);
+}
+
+.about-me__link:hover {
+  text-decoration: underline;
+}
+
+.about-me__link:hover {
+  opacity: 0.7;
+}
+
 /* .about-me__img {
   box-shadow: var(--bs);
 } */
