--- a/scss/main.css
+++ b/scss/main.css
@@ -201,6 +201,239 @@
           transition-delay: 0.4s;
 }
 
+.portfolio {
+  text-align: center;
+  background: var(--clr-dark);
+  color: var(--clr-accent);
+  padding: 5em 0;
+}
+
+.portfolio-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.portfolio-item {
+  position: relative;
+  overflow: hidden;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 20rem;
+          flex: 1 1 20rem;
+}
+
+.portfolio-item .portfolio-image {
+  display: block;
+  width: 100%;
+}
+
+.portfolio-item figcaption {
+  position: absolute;
+  top: 100%;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  padding: 1em;
+  background: var(--clr-accent);
+  opacity: 0.75;
+  color: var(--clr-light);
+  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-transition: top ease-in-out 250ms;
+  transition: top ease-in-out 250ms;
+}
+
+.portfolio-item:hover figcaption,
+.portfolio-item:focus figcaption {
+  top: 0;
+}
+
+.portfolio-title {
+  color: var(--clr-light);
+  font-size: 2.5rem;
+  margin-bottom: auto;
+}
+
+.portfolio-desc {
+  display: none;
+}
+
+.portfolio-link {
+  color: white;
+  font-weight: var(--fw-bold);
+  font-size: 1.1rem;
+  text-decoration: none;
+  border-bottom: 3px solid var(--clr-light);
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+.portfolio-link::after {
+  content: url(/img/arrow-white.svg);
+  display: inline-block;
+  height: 0.8em;
+  width: 0.8em;
+  margin-left: 0.5em;
+}
+
+@supports (display: grid) {
+  .portfolio-items {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .portfolio-item.featured {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / span 2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    grid-row: 1 / span 2;
+  }
+  .featured .portfolio-title {
+    font-size: 5rem;
+  }
+  .featured .portfolio-desc {
+    display: block;
+  }
+}
+
+.portfolio-modal {
+  position: fixed;
+  z-index: 10;
+  top: 2em;
+  bottom: 2em;
+  left: 2em;
+  right: 2em;
+  background: white;
+  -webkit-box-shadow: 0 0 0 3em rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 0 3em rgba(0, 0, 0, 0.5);
+  overflow-y: scroll;
+  overflow-x: hidden;
+  display: none;
+}
+
+.portfolio-modal.is-open {
+  display: block;
+}
+
+.modal-close {
+  background: white;
+  position: fixed;
+  left: 1em;
+  top: 1em;
+  border: 0;
+  width: 2em;
+  height: 2em;
+  padding: 4px 0 0;
+  border-radius: 50%;
+  cursor: pointer;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.portfolio-header {
+  text-align: left;
+  padding: 5em 0;
+  margin-bottom: 2em;
+  background-size: cover;
+  background-position: center;
+}
+
+.header-one {
+  background-image: url(/img/projects/revitalize/revitalize-homepage.jpg);
+}
+
+.header-two {
+  background-image: url(/img/projects/revitalize/revitalize-homepage.jpg);
+}
+
+.portfolio-title-box {
+  background: rgba(var(--clr-accent), 0.75);
+  padding: 3em 0 3em 3em;
+  color: white;
+  width: 70%;
+}
+
+.portfolio-title-box .portfolio-title {
+  font-size: 3.5rem;
+  display: inline-block;
+}
+
+.portfolio-title-box .portfolio-title::after {
+  content: '';
+  display: block;
+  height: 1px;
+  margin: 0.5em 0;
+  background: white;
+  width: 100%;
+}
+
+.portfolio-subtitle {
+  font-size: 1rem;
+}
+
+.portfolio-content {
+  text-align: left;
+  width: 85%;
+  margin: 0 auto;
+  padding-bottom: 2em;
+}
+
+.portfolio-full-width {
+  width: 100vw;
+  max-width: initial;
+  margin: 2em calc(50% - 50vw);
+  height: 20vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@-webkit-keyframes modalIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes modalIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes modalOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes modalOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 body {
   background: var(--clr-light);
   color: var(--clr-dark);
