--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -1,23 +1,26 @@
 .portfolio {
   text-align: center;
   background: var(--clr-dark);
-  color: var(--clr-accent);
-  padding: 5em 0;
+  color: var(--clr-light);
+  padding: 5em 2em;
 }
 
 .portfolio-items {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  width: 100%;
 }
 
 .portfolio-item {
+  background: var(--clr-accent);
+
   position: relative;
   overflow: hidden;
-  flex: 1 1 20rem;
+  width: 100%;
 
   .portfolio-image {
-    display: block;
     width: 100%;
+    object-fit: cover;
   }
 
   figcaption {
@@ -66,32 +69,6 @@
     height: 0.8em;
     width: 0.8em;
     margin-left: 0.5em;
-  }
-}
-
-@supports (display: grid) {
-  .portfolio-items {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-
-    // @include mq {
-    //   grid-template-columns: repeat(4, 1fr);
-    // }
-  }
-
-  .portfolio-item.featured {
-    grid-column: 1 / span 2;
-    grid-row: 1 / span 2;
-  }
-
-  .featured {
-    .portfolio-title {
-      font-size: 5rem;
-    }
-
-    .portfolio-desc {
-      display: block;
-    }
   }
 }
 
