--- a/scss/main.css
+++ b/scss/main.css
@@ -204,29 +204,29 @@
 .portfolio {
   text-align: center;
   background: var(--clr-dark);
-  color: var(--clr-accent);
-  padding: 5em 0;
+  color: var(--clr-light);
+  padding: 5em 2em;
 }
 
 .portfolio-items {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  width: 100%;
 }
 
 .portfolio-item {
+  background: var(--clr-accent);
   position: relative;
   overflow: hidden;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 20rem;
-          flex: 1 1 20rem;
+  width: 100%;
 }
 
 .portfolio-item .portfolio-image {
-  display: block;
   width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .portfolio-item figcaption {
@@ -282,29 +282,6 @@
   height: 0.8em;
   width: 0.8em;
   margin-left: 0.5em;
-}
-
-@supports (display: grid) {
-  .portfolio-items {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-  .portfolio-item.featured {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1 / span 2;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 2;
-    grid-row: 1 / span 2;
-  }
-  .featured .portfolio-title {
-    font-size: 5rem;
-  }
-  .featured .portfolio-desc {
-    display: block;
-  }
 }
 
 .portfolio-modal {
