:lipstick: Style modals
copy needs to be updated

--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,28 @@ header {
   }
 }
 
+/* Individual portfolio item styles */
+
+.portfolio-item__subheader {
+  font-size: var(--fs-h3);
+  font-weight: bold;
+  margin-bottom: -15px;
+  margin-top: 60px;
+  text-transform: capitalize;
+}
+
+.portfolio-item-individual {
+  padding: 0 2em 2em;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.portfolio-item-individual p {
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* footer */
 
 .footer {
