--- a/scss/main.css
+++ b/scss/main.css
@@ -237,7 +237,7 @@
   left: 0;
   padding: 1em;
   background: var(--clr-accent);
-  opacity: 0.75;
+  opacity: 0.9;
   color: var(--clr-light);
   text-align: left;
   display: -webkit-box;
@@ -260,10 +260,6 @@
   color: var(--clr-light);
   font-size: 2.5rem;
   margin-bottom: auto;
-}
-
-.portfolio-desc {
-  display: none;
 }
 
 .portfolio-link {
@@ -291,7 +287,8 @@
   bottom: 2em;
   left: 2em;
   right: 2em;
-  background: white;
+  background: var(--clr-light);
+  color: var(--clr-dark);
   -webkit-box-shadow: 0 0 0 3em rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 0 3em rgba(0, 0, 0, 0.5);
   overflow-y: scroll;
@@ -326,18 +323,10 @@
   background-position: center;
 }
 
-.header-one {
-  background-image: url(/img/projects/revitalize/revitalize-homepage.jpg);
-}
-
-.header-two {
-  background-image: url(/img/projects/revitalize/revitalize-homepage.jpg);
-}
-
 .portfolio-title-box {
   background: rgba(var(--clr-accent), 0.75);
   padding: 3em 0 3em 3em;
-  color: white;
+  color: black;
   width: 70%;
 }
 
