:lipstick: Update modal styling

--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,11 @@ header {
   text-transform: capitalize;
 }
 
+.credentials {
+  /* font-weight: var(--fw-bold); */
+  color: var(--clr-accent);
+}
+
 .portfolio-item-individual {
   padding: 0 2em 2em;
   max-width: 1000px;
