:lipstick: Update img links

--- a/scss/main.css
+++ b/scss/main.css
@@ -100,7 +100,7 @@
 .menu-branding .portrait {
   width: 250px;
   height: 334px;
-  background: url("../img/selfie-10.jpg");
+  background: url("../assets/selfie-10.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
