--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -91,7 +91,7 @@
     .portrait {
       width: 250px;
       height: 334px;
-      background: url('../img/selfie-10.jpg');
+      background: url('../assets/selfie-10.jpg');
 
       background-position: center;
       background-size: cover;
