--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -52,9 +52,9 @@
   margin-bottom: auto;
 }
 
-.portfolio-desc {
-  // display: none;
-}
+// .portfolio-desc {
+//   // display: none;
+// }
 
 .portfolio-link {
   color: white;
